# NeuroSpace

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  conftest.py  create_tables.py  docker-compose.yml  guidelines.md  hardhat.config.js  nixpacks.toml  package-lock.json  package.json  payer.json  pytest.ini  railway.json  requirements.txt  setup.py  test-doc.txt
.nixpacks/: config.json
api/: __init__.py  check_balance.py  generate_keypair.py  pytest.ini  requirements.txt
api/app/: __init__.py  main.py  solana_utils.py
contracts/: PaymentContract.sol
db/: init.sql
frontend/: index.html  package-lock.json  package.json  vite.config.ts
hardhat/: hardhat.config.js  package-lock.json  package.json
program/: Cargo.toml
program/src/: lib.rs
scripts/: deploy.js  deploy_payment.js  signature_verification.py  view_blockchain_data.py
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-20001-5LnVtXuxAKYBF47QVKgGSTffUsb3QBnsZ33BuNdea6Xk.tar.zst  snapshot-20101-GiE5r7K1EZRAMzTBiwxUMp6kJNN6evBh3kx6EYanoeRY.tar.zst  snapshot-27201-5ZXM8aTDZxkiJ4erMVqR9ezyjXZc4o7ghydeGTT9fN8G.tar.zst  snapshot-27301-51Dk7PFb6K3MyZETFmWPrGFVUZXBRUaZJsi6S39YZw1V.tar.zst  snapshot-4301-BDZz8B58L3hMfkq8j8h5G33jz2SwWCWAr2WxpZK91Wim.tar.zst  snapshot-4401-6xDTQ6adStJjgD8AbZa2pzHKk6wsTRyAv2APRBDy8Lcd.tar.zst  snapshot-4700-381nqxwpv1BxNF9y8FU7diNwG3mjDq4oMtcUVL6hEDRK.tar.zst  snapshot-4800-53Qp5S3zNhaVZu69Pop1dGSsipXUwE17LxxRMebXHseW.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
tests/: test_integration.py
(+184 files in other folders)
